Fix some bugs in admin console

--- a/frontend/statics/admin.html
+++ b/frontend/statics/admin.html
@@ -92,10 +92,10 @@
         //     { server_address: "127.0.0.1:8082", status: "Alive", num_connections: 3},
         // ];
 
-        const kv_pairs = [
-            { rowkey: "key1", columnkey: "column1" },
-            { rowkey: "key2", columnkey: "column2" },
-        ];
+        // const kv_pairs = [
+        //     { rowkey: "key1", columnkey: "column1" },
+        //     { rowkey: "key2", columnkey: "column2" },
+        // ];
 
         function displayBytes(rowkey, columnkey) {
             console.log('Getting bytes for ' + rowkey + "," + columnkey);
